--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -54,11 +54,13 @@
       {{ body_font_bold_italic | font_face: font_display: 'swap' }}
       {{ settings.type_header_font | font_face: font_display: 'swap' }}
 
+      /* For Headings */
       @font-face {
         font-family: "Hoefler Text";
         src: url("{{ 'hoefler-text-regular.ttf' | asset_url }}") format("truetype");
       }
 
+      /* For Body */
       @font-face {
         font-family: "Avenir";
         src: url("{{ 'AvenirLTStd-Medium.otf' | asset_url }}") format("opentype");
@@ -110,14 +112,15 @@
       }
 
       :root {
-        --font-body-family: {{ settings.type_body_font.family }}, {{ settings.type_body_font.fallback_families }};
-        --font-body-style: {{ settings.type_body_font.style }};
-        --font-body-weight: {{ settings.type_body_font.weight }};
-        --font-body-weight-bold: {{ settings.type_body_font.weight | plus: 300 | at_most: 1000 }};
+        /* Changed these from the type_body_font to just the local fonts. */
+        --font-body-family: "Avenir", "sans-serif";
+        --font-body-style: "normal";
+        --font-body-weight: 500; /* this could be 400 too, not sure */
+        --font-body-weight-bold: {{ 500 | plus: 300 | at_most: 1000 }};
 
-        --font-heading-family: {{ settings.type_header_font.family }}, {{ settings.type_header_font.fallback_families }};
-        --font-heading-style: {{ settings.type_header_font.style }};
-        --font-heading-weight: {{ settings.type_header_font.weight }};
+        --font-heading-family: "Hoefler Text", "serif";
+        --font-heading-style: "normal";
+        --font-heading-weight: 400;
 
         --font-body-scale: {{ settings.body_scale | divided_by: 100.0 }};
         --font-heading-scale: {{ settings.heading_scale | times: 1.0 | divided_by: settings.body_scale }};
