--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -367,7 +367,7 @@
       // My Changes:
       // this.header.style.height = 0;
       this.header.classList.add("make-transparent");
-      this.header.style.transition = "background-color 0.2s ease-in, transform 0.15s ease-out";
+      this.header.style.transition = "background-color 0.2s ease-in-out, transform 0.15s ease-out";
       this.header.style.top = "-1px";  // We need to do this otherwise there's a 1 pixel gap. 
       console.log(this.header);
     }
