--- a/sections/in-stock.liquid
+++ b/sections/in-stock.liquid
@@ -58,7 +58,7 @@
 </style>
 
 <div class="in-stock page-width-desktop">
-  <h1 class="in-stock--title">In Stock</h1>
+  <h1 class="in-stock--title">Stone Collection</h1>
   {% for entry in shop.metaobjects.material_color_collection.values %}
     {% assign image_darkness_list = entry.img_dark | remove: '[' | remove: ']' | split: ',' %}
     <div class="in-stock__material">
