--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -164,6 +164,20 @@
   </div>
 </div>
 
+<style>
+  .announcement-bar,
+  .announcement-bar__announcement {
+  }
+  .announcement-bar__message {
+    font-size: 1.5rem;
+    text-align: center;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: var(--font-paragraph-family);
+  }
+</style>
+
 {% schema %}
 {
   "name": "t:sections.announcement-bar.name",
