--- a/sections/project-previews.liquid
+++ b/sections/project-previews.liquid
@@ -120,7 +120,7 @@
 </style>
 
 <div class="projects page-width-desktop">
-  <h1 class="projects__title">Projects</h1>
+  <h1 class="projects__title">{{ settings.title }}</h1>
   <div class="projects__container">
     {% for entry in shop.metaobjects.projects.values %}
       <div class="projects__item">
@@ -244,3 +244,17 @@
     }, animtime * 1000);
   });
 {% endjavascript %}
+
+{% schema %}
+{
+  "name": "Project Previews",
+  "settings": [
+    {
+      "type": "text",
+      "id": "title",
+      "label": "Section Title",
+      "default": "Projects"
+    }
+  ]
+}
+{% endschema %}
