--- a/sections/slider-hero.liquid
+++ b/sections/slider-hero.liquid
@@ -7,6 +7,7 @@
     width: 100%;
     height: 100%;
     /*  height: calc(100vh - 50px); */
+    aspect-ratio: 16/9;
     position: relative;
   }
   .slider-hero__title {
