--- a/sections/project-previews.liquid
+++ b/sections/project-previews.liquid
@@ -120,7 +120,7 @@
 </style>
 
 <div class="projects page-width-desktop">
-  <h1 class="projects__title">{{ settings.title }}</h1>
+  <h1 class="projects__title">{{ section.settings.title }}</h1>
   <div class="projects__container">
     {% for entry in shop.metaobjects.projects.values %}
       <div class="projects__item">
