--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -510,6 +510,12 @@
   "max_blocks": 3,
   "settings": [
     {
+      "type": "checkbox",
+      "id": "enable_padding",
+      "label": "Enable Padding",
+      "default": false
+    },
+    {
       "type": "select",
       "id": "logo_position",
       "options": [
