--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -105,6 +105,12 @@
   .section-header {
     margin-bottom: calc(var(--header-height) * -1) !important;
   }
+  .section-header.make-transparent sticky-header{
+    background:transparent !important;
+  }
+  .section-header.make-transparent sticky-header header {
+    filter: invert(0);
+  }
   </style>
 {% endunless %}
 
