--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -100,11 +100,16 @@
   I added this.
 {% endcomment %}
 
-{% if section.settings.enable_padding %}
+{% unless section.settings.enable_padding %}
   <style>
   .section-header {
     margin-bottom: calc(var(--header-height) * -1) !important;
   }
+  </style>
+{% endunless %}
+
+{% if section.settings.enable_padding %}
+  <style>
   .section-header.make-transparent sticky-header{
     background:transparent !important;
   }
