mobile version done

--- a/sections/in-stock.liquid
+++ b/sections/in-stock.liquid
@@ -6,6 +6,9 @@
     width: 100%;
     text-align: center;
   }
+  .in-stock__material {
+    margin-top: 4rem;
+  }
   .in-stock__material__item {
     width: 100%;
     height: 100px;
@@ -54,6 +57,12 @@
     left: 0;
     top: 0;
     z-index: 1;
+  }
+
+  @media screen and (max-width: 1000px) {
+    .in-stock {
+      margin: 2rem;
+    }
   }
 </style>
 
