--- a/sections/highlights.liquid
+++ b/sections/highlights.liquid
@@ -14,6 +14,14 @@
     justify-content: center;
     gap: 4rem;
   }
+  @media screen and (max-width: 800px) {
+    .highlights__list {
+      display: grid;
+      gap: 2rem;
+      grid-template-columns: 1fr 1fr;
+      justify-items: center;
+    }
+  }
   .highlights__item {
     display: flex;
     flex-direction: column;
