--- a/sections/project-previews.liquid
+++ b/sections/project-previews.liquid
@@ -1,4 +1,8 @@
 <style>
+  :root {
+    --projects-text-shadow-blur-rad: 6px;
+    --projects-text-shadow-color: rgba(0, 0, 0, 0.15);
+  }
   .projects__container {
     aspect-ratio: 16/9;
     overflow: hidden;
@@ -64,6 +68,11 @@
     font-size: 3.2rem;
     margin-top: 0;
     margin-bottom: -1rem;
+
+    text-shadow: 1px 1px var(--projects-text-shadow-blur-rad) var(--projects-text-shadow-color),
+      1px -1px var(--projects-text-shadow-blur-rad) var(--projects-text-shadow-color),
+      -1px 1px var(--projects-text-shadow-blur-rad) var(--projects-text-shadow-color),
+      -1px -1px var(--projects-text-shadow-blur-rad) var(--projects-text-shadow-color);
   }
   .projects__item__bottom--title a {
     color: rgba(var(--color-background), 0.95);
@@ -74,6 +83,10 @@
   }
   .projects__item__bottom--preview-text {
     color: rgba(var(--color-background), 0.9);
+    text-shadow: 1px 1px var(--projects-text-shadow-blur-rad) var(--projects-text-shadow-color),
+      1px -1px var(--projects-text-shadow-blur-rad) var(--projects-text-shadow-color),
+      -1px 1px var(--projects-text-shadow-blur-rad) var(--projects-text-shadow-color),
+      -1px -1px var(--projects-text-shadow-blur-rad) var(--projects-text-shadow-color);
     margin-bottom: 0;
   }
   .projects__item__bottom--time {
@@ -123,6 +136,47 @@
   .projects__button--disabled {
     opacity: 50%;
     cursor: auto;
+  }
+
+  @media screen and (max-width: 1000px) {
+    .projects {
+      margin-inline: 1rem;
+    }
+    .projects__container {
+      aspect-ratio: 16/9;
+    }
+  }
+  @media screen and (max-width: 800px) {
+    .projects__container,
+    .projects__item--thumbnail::after {
+      aspect-ratio: 1/1;
+    }
+    .projects__item {
+      width: 100%;
+    }
+    .projects__item__bottom {
+    }
+  }
+  @media screen and (max-width: 600px) {
+    .projects__container,
+    .projects__item--thumbnail::after {
+      aspect-ratio: 3/4.5;
+    }
+    .projects__item {
+      width: 100%;
+    }
+    .projects__item__bottom::before {
+      left: -1.5rem;
+    }
+    .projects__item__bottom {
+      left: 3rem;
+    }
+    .projects__item__bottom--time {
+      width: 5px;
+    }
+    .projects__item__bottom--preview-text {
+      line-height: 160%;
+    }
   }
 </style>
 
