--- a/sections/slider-hero.liquid
+++ b/sections/slider-hero.liquid
@@ -9,17 +9,21 @@
     /*  height: calc(100vh - 50px); */
     aspect-ratio: 16/9;
     position: relative;
+    overflow: hidden;
   }
   .slider-hero__title {
     margin: 0;
   }
   .slider-hero__container {
     overflow: hidden;
-    display: inline-flex;
-    flex-direction: row;
     width: 100%;
-    height: 100rem;
+    height: 100%;
     /*background-color: red;*/
+  }
+  .slider-hero__container__inner {
+    display: flex;
+    height: 100%;
+    width: max-content;
   }
   .slider-hero__item {
     width: 100%;
@@ -39,7 +43,7 @@
   }
   .slider-hero__item--thumbnail::after {
     width: 100%;
-    /*height: 100%;*/
+    height: 100%;
     left: 0;
     aspect-ratio: 16/9;
     top: 0;
@@ -157,34 +161,91 @@
   .slider-hero__button--disabled {
     cursor: url({{'unmoveable.svg'|asset_url}}), pointer;
   }
+
+  @media screen and (max-width: 1368px) {
+    .slider-hero {
+      height: 50vh;
+    }
+    .slider-hero__item {
+      width: 100vw;
+    }
+    .slider-hero__item--thumbnail {
+      aspect-ratio: auto;
+      object-fit: cover;
+    }
+    .slider-hero__item--thumbnail .slider-hero__item--thumbnail-content {
+      aspect-ratio: auto;
+      object-fit: cover;
+    }
+    .slider-hero__item--thumbnail::after {
+      aspect-ratio: auto;
+    }
+    .slider-hero__item__bottom {
+      bottom: 20%;
+      left: 7rem;
+      margin-right: 0;
+      width: 50%;
+      padding-inline: 0;
+    }
+    .slider-hero__button-container,
+    .slider-hero__button--left,
+    .slider-hero__button--right {
+      cursor: pointer !important;
+    }
+  }
+  @media screen and (max-width: 720px) {
+    .slider-hero {
+      height: 80vh;
+    }
+    .slider-hero__item__bottom {
+      bottom: 20%;
+      left: 4rem;
+      width: 65%;
+      padding-inline: 1rem;
+    }
+  }
+  @media screen and (max-width: 600px) {
+    .slider-hero {
+      height: 100vh;
+    }
+    .slider-hero__item__bottom {
+      width: 75%;
+      bottom: 15vh;
+    }
+    .slider-hero__item__bottom--time {
+      width: 5px;
+    }
+  }
 </style>
 
 <div class="slider-hero">
   <div class="slider-hero__container">
-    {% for entry in shop.metaobjects.hero_content.values %}
-      <div class="slider-hero__item">
-        <div class="slider-hero__item__bottom">
-          <div class="slider-hero__item__bottom--time"></div>
-          <h1 class="slider-hero__item__bottom--title">{{ entry.title }}</h1>
-          <p class="slider-hero__item__bottom--preview-text">{{ entry.description }}</p>
+    <div class="slider-hero__container__inner">
+      {% for entry in shop.metaobjects.hero_content.values %}
+        <div class="slider-hero__item">
+          <div class="slider-hero__item__bottom">
+            <div class="slider-hero__item__bottom--time"></div>
+            <h1 class="slider-hero__item__bottom--title">{{ entry.title }}</h1>
+            <p class="slider-hero__item__bottom--preview-text">{{ entry.description }}</p>
+          </div>
+          <div class="slider-hero__item--thumbnail">
+            {% if entry.thumbnail.value.media_type == 'image' %}
+              <img
+                class="slider-hero__item--thumbnail-content"
+                src="{{ entry.thumbnail.value | image_url }}"
+                width="auto"
+                height="auto"
+                alt=""
+              >
+            {% else %}
+              <div class="slider-hero__item--thumbnail-content">
+                {{ entry.thumbnail.value | media_tag: autoplay: true, loop: true, muted: true, controls: false }}
+              </div>
+            {% endif %}
+          </div>
         </div>
-        <div class="slider-hero__item--thumbnail">
-          {% if entry.thumbnail.value.media_type == 'image' %}
-            <img
-              class="slider-hero__item--thumbnail-content"
-              src="{{ entry.thumbnail.value | image_url }}"
-              width="auto"
-              height="auto"
-              alt=""
-            >
-          {% else %}
-            <div class="slider-hero__item--thumbnail-content">
-              {{ entry.thumbnail.value | media_tag: autoplay: true, loop: true, muted: true, controls: false }}
-            </div>
-          {% endif %}
-        </div>
-      </div>
-    {% endfor %}
+      {% endfor %}
+    </div>
   </div>
   <div class="slider-hero__button-container">
     <button
