add product breadcrumbs

--- a/sections/breadcrumbs-product.liquid
+++ b/sections/breadcrumbs-product.liquid
@@ -1,26 +1,42 @@
 <style>
   .breadcrumbs {
+    padding-block: 4rem 1rem;
   }
   .breadcrumbs__list {
     display: flex;
-    gap: 1rem;
+    gap: 0.3rem;
+    margin: 0;
+    padding: 0;
   }
   .breadcrumbs__item {
     list-style: none;
+    color: #3e3e3e;
+  }
+  .breadcrumbs__item--active {
+    color: #000000;
   }
   .breadcrumbs__item--link {
-  }
-  .breadcrumbs__item--link--active {
+    color: currentColor;
+    /*text-decoration: none;*/
   }
 </style>
 
-<div class="breadcrumbs">
+<div class="breadcrumbs page-width">
   <ul class="breadcrumbs__list">
     <li class="breadcrumbs__item">
       <a class="breadcrumbs__item--link" href="{{ shop.url }}/collections/all">All Products</a>
     </li>
-    <li>
-      <a class="breadcrumbs__item--link" href="{{ shop.url }}"></a>
+    <span>/</span>
+    <li class="breadcrumbs__item">
+      <a class="breadcrumbs__item--link" href="{{ shop.url }}{{ product.collections.first.url }}">
+        {{ product.collections.first.title }}
+      </a>
+    </li>
+    <span>/</span>
+    <li class="breadcrumbs__item breadcrumbs__item--active">
+      <a class="breadcrumbs__item--link" href="{{ shop.url }}{{ product.url }}">
+        {{ product.title }}
+      </a>
     </li>
   </ul>
 </div>
@@ -33,7 +49,7 @@
       "type": "text",
       "id": "title",
       "label": "Section Title",
-      "default": "Projects"
+      "default": "All Products"
     },
     {
       "type": "product",
