--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -33,8 +33,10 @@
 
     @media screen and (min-width: 750px) {
       .section-{{ section.id }}-padding {
+        /* Modified By Me. */
         padding-top: {{ section.settings.padding_top }}px;
         padding-bottom: {{ section.settings.padding_bottom }}px;
+        padding-top:0;
       }
     }
   {%- endstyle -%}
