--- a/assets/component-collection-hero.css
+++ b/assets/component-collection-hero.css
@@ -36,7 +36,9 @@
 }
 
 .collection-hero__title {
-  margin: 2.5rem 0;
+  /*I modified this, hihiha. */
+  /*margin: 2.5rem 0;*/
+  margin-block: 0;
 }
 
 .collection-hero__title + .collection-hero__description {
