--- a/sections/slider-hero.liquid
+++ b/sections/slider-hero.liquid
@@ -91,7 +91,7 @@
     width: 1px;
     height: 100%;
     content: '';
-    left: -2rem;
+    left: {{ section.settings.barHorizontalPos }}rem;
     bottom: 0rem;
     position: absolute;
     background-color: white;
@@ -115,7 +115,7 @@
     width: 7px;
     height: 0;
     content: '';
-    left: -2rem;
+    left: {{ section.settings.barHorizontalPos }}rem;
     bottom: 0rem;
     display: block !important;
     background-color: white;
@@ -357,3 +357,38 @@
     }, animtime * 1000);
   });
 {% endjavascript %}
+
+{% schema %}
+{
+  "name": "Slider Hero",
+  "settings": [
+    {
+      "type": "range",
+      "id": "sectionHeight",
+      "label": "Section Height",
+      "default": 50,
+      "min": 0,
+      "max": 100,
+      "step": 5
+    },
+    {
+      "type": "range",
+      "id": "barVerticalPos",
+      "label": "Bar Vertical Position",
+      "default": 50,
+      "min": 0,
+      "max": 100,
+      "step": 5
+    },
+    {
+      "type": "range",
+      "id": "barHorizontalPos",
+      "label": "Bar Horizontal Position",
+      "default": -2,
+      "min": -3,
+      "max": 3,
+      "step": 0.1
+    }
+  ]
+}
+{% endschema %}
