--- a/sections/slider-hero.liquid
+++ b/sections/slider-hero.liquid
@@ -5,7 +5,7 @@
   }
   .slider-hero {
     width: 100%;
-    height: 100%;
+    height: {{ section.settings.sectionHeight  }}%;
     /*  height: calc(100vh - 50px); */
     aspect-ratio: 16/9;
     position: relative;
