--- a/sections/slider-hero.liquid
+++ b/sections/slider-hero.liquid
@@ -63,11 +63,12 @@
     width: 100%;
     height: 100%;
   }
+  {%  assign result = 100 | minus: section.settings.barVerticalPos %}
   .slider-hero__item__bottom {
     position: absolute;
 
     left: 5rem;
-    bottom: 30%;
+    bottom: {{ result }}%;
     margin-right: 1rem;
     z-index: 2;
 
@@ -366,7 +367,7 @@
       "type": "range",
       "id": "sectionHeight",
       "label": "Section Height",
-      "default": 50,
+      "default": 100,
       "min": 0,
       "max": 100,
       "step": 5
@@ -375,10 +376,10 @@
       "type": "range",
       "id": "barVerticalPos",
       "label": "Bar Vertical Position",
-      "default": 50,
+      "default": 70,
       "min": 0,
       "max": 100,
-      "step": 5
+      "step": 1
     },
     {
       "type": "range",
