--- a/sections/slider-hero.liquid
+++ b/sections/slider-hero.liquid
@@ -5,7 +5,8 @@
   }
   .slider-hero {
     width: 100%;
-    height: {{ section.settings.sectionHeight  }}%;
+    height: {{ section.settings.sectionHeight  }}vh;
+    height: {{ section.settings.sectionHeight  }}dvh;
     /*  height: calc(100vh - 50px); */
     aspect-ratio: 16/9;
     position: relative;
@@ -26,12 +27,12 @@
     width: max-content;
   }
   .slider-hero__item {
-    width: 100%;
+    width: 100vw;
+    width: 100dvw;
     height: 100%;
     /*background-color: red;*/
 
     position: relative;
-    width: max-content;
     transition: transform var(--duration-long) ease;
   }
   .slider-hero__item--thumbnail {
@@ -39,13 +40,13 @@
     height: 100%;
 
     position: relative;
-    aspect-ratio: 16/9;
+    /*aspect-ratio: 16/9;*/
   }
   .slider-hero__item--thumbnail::after {
     width: 100%;
     height: 100%;
     left: 0;
-    aspect-ratio: 16/9;
+    /*aspect-ratio: 16/9;*/
     top: 0;
     content: '';
     position: absolute;
@@ -56,12 +57,14 @@
   .slider-hero__item--thumbnail .slider-hero__item--thumbnail-content {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 
-    aspect-ratio: 16/9;
+    /*aspect-ratio: 16/9;*/
   }
   .slider-hero__item--thumbnail-content video {
     width: 100%;
     height: 100%;
+    object-fit: cover;
   }
   {%  assign result = 100 | minus: section.settings.barVerticalPos %}
   .slider-hero__item__bottom {
@@ -367,7 +370,7 @@
       "type": "range",
       "id": "sectionHeight",
       "label": "Section Height",
-      "default": 100,
+      "default": 85,
       "min": 0,
       "max": 100,
       "step": 5
@@ -376,7 +379,7 @@
       "type": "range",
       "id": "barVerticalPos",
       "label": "Bar Vertical Position",
-      "default": 70,
+      "default": 80,
       "min": 0,
       "max": 100,
       "step": 1
@@ -385,7 +388,7 @@
       "type": "range",
       "id": "barHorizontalPos",
       "label": "Bar Horizontal Position",
-      "default": -2,
+      "default": -1,
       "min": -3,
       "max": 3,
       "step": 0.1
